# mldictionary

./: .editorconfig  .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: unittest.yaml
mldictionary/: __init__.py  dictionary.py  english.py  portuguese.py  spanish.py
tests/: general_tests.py  test_english.py  test_portuguese.py  test_spanish.py
