[tool.poetry]
name = "mldictionary"
version = "0.2.6"
description = "word's dictionary for several languages"
authors = ["Pablo Emidio <p.emidiodev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/mldictionary/"
repository = "https://github.com/PabloEmidio/mldictionary"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    {include = "mldictionary"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.25.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
radon = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
